add post/user assoc

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -3,5 +3,7 @@
   %p
     Published:
     = time_ago_in_words(post.created_at)
+    ago, by:
+    = post.user.email
 
 = link_to "new post", new_post_path
